[package]
name = "rauschen"
version = "0.1.0"
edition = "2021"
description = "ASMR Sound Generator"
license = "MIT"
repository = "https://github.com/schultyy/rauschen/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { version = "0.15.0", features = ["symphonia-mp3"] }
tui = { version = "0.17", features = ["crossterm"], default-features = false }
crossterm = "0.23"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"

log = "0.4"
tui-logger = { git = "https://github.com/gin66/tui-logger", rev = "3a3568e2464dddc2205e071234135998342d7f1d" }
rand="0.8.4"