[package]
name = "rauschen"
version = "1.0.0"
edition = "2021"
description = "ASMR Sound Generator"
license = "MIT"
repository = "https://github.com/schultyy/rauschen/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.15"
tui = { version = "0.17", features = ["crossterm"], default-features = false }
crossterm = "0.23"
eyre = "0.6"
dirs = "4.0.0"
rand="0.8.4"
reqwest = { version = "0.11.9", features = ["blocking"] }